Bug #21585 ndbd, ndb_mgmd and ndb_mgm mention Ndb.cfg in -c & --ndb-connectstring help text
Submitted: 11 Aug 2006 16:35 Modified: 2 Nov 2006 9:50
Reporter: Roland Bouman
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:All OS:Any (All)
Assigned to: Guangbao Ni Target Version:
Tags: --help, ndbd, ndb_mgmd, NDB_MGM, Ndb.cfg, -c, --ndb-connectstring Cluster

[11 Aug 2006 16:35] Roland Bouman
Description:
the --help option shows a screen of command options for the ndbd, nbd_mgmd and ndb_mgm
executables. For all of these, the help screen contains this text:

 -c, --ndb-connectstring=name
                      Set connect string for connecting to ndb_mgmd. Syntax:
                      "[nodeid=<id>;][host=]<hostname>[:<port>]". Overides
                      specifying entries in NDB_CONNECTSTRING and Ndb.cfg

The reference to Ndb.cfg should removed or rephrased to My.cnf

Ndb.cfg is now obsolete.

How to repeat:
ndbd --help | grep "Ndb.cfg"
                      specifying entries in NDB_CONNECTSTRING and Ndb.cfg
ndb_mgmd --help | grep "Ndb.cfg"
                      specifying entries in NDB_CONNECTSTRING and Ndb.cfg
ndb_mgm --help | grep "Ndb.cfg"
                      specifying entries in NDB_CONNECTSTRING and Ndb.cfg

Suggested fix:
Change to My.cnf (if still applicable)
[14 Aug 2006 20:02] Miguel Solorzano
Updating category to Cluster.
[21 Aug 2006 2:30] Jon Stephens
Thanks for the bug report.

Verified as described by the submitter.

In addition, this appears to be an issue for all cluster executables to which the -c or
--ndb-connectstring option applies - e.g. ndb_restore, ndb_config, ndb_show_tables, etc. -
and not just those mentioned in the original bug report.

When fixing this, please note that the revised help text should refer to 'my.cnf' (all
lowercase) and not 'My.cnf'.
[19 Sep 2006 5:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12180

ChangeSet@1.2535, 2006-09-19 11:15:50+08:00, gni@dev3-127.(none) +3 -0
  BUG#21585  The --help option shows a screen of command options for the ndbd,ndb_mgmd,
ndb_mgm 
             and other commands related to ndb. For all of these, the help screen contains

            "Ndb.cfg" string. Now i change the "Ndb.cfg" to "my.cnf" because "Ndb.cfg" is
obsolete.
[22 Sep 2006 14:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12391

ChangeSet@1.2258, 2006-09-22 20:13:03+08:00, gni@dev3-127.(none) +3 -0
  BUG#21585 The --help option shows a screen of command options for ndbd, ndb_mgmd,
ndb_mgm 
            and other commands related to ndb. For all of these, the help screen contains
            "Ndb.cfg" string. Now i change the "Ndb.cfg" to "my.cnf" because "Ndb.cfg" is
obsolete.
[10 Oct 2006 20:39] Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 15:27] Jonas Oreland
pushed into 4.1.22
[1 Nov 2006 15:43] Jonas Oreland
pushed into 5.0.29
[2 Nov 2006 9:50] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix for 4.1.22/5.0.29/5.1.12. Thanks, guys!
[4 Nov 2006 4:22] Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*