BUG#21585  The --help option shows a screen of command options for the ndbd,ndb_mgmd, ndb_mgm            and other commands related to ndb. For all of these, the help screen contains           "Ndb.cfg" string. Now i change the "Ndb.cfg" to "my.cnf" because "Ndb.cfg" is obsolete.